packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  late final _uniffi_breez_sdk_liquid_bindings_fn_func_set_loggerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint64, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_func_set_logger');
  late final _uniffi_breez_sdk_liquid_bindings_fn_func_set_logger =
      _uniffi_breez_sdk_liquid_bindings_fn_func_set_loggerPtr
          .asFunction<void Function(int, ffi.Pointer<RustCallStatus>)>();

  RustBuffer ffi_breez_sdk_liquid_bindings_rustbuffer_alloc(
    int size,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rustbuffer_alloc(
      size,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_allocPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Int32, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rustbuffer_alloc');
  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_alloc =
      _ffi_breez_sdk_liquid_bindings_rustbuffer_allocPtr
          .asFunction<RustBuffer Function(int, ffi.Pointer<RustCallStatus>)>();

  RustBuffer ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytes(
    ForeignBytes bytes,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytes(
      bytes,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytesPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ForeignBytes, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytes');
  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytes =
      _ffi_breez_sdk_liquid_bindings_rustbuffer_from_bytesPtr
          .asFunction<RustBuffer Function(ForeignBytes, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rustbuffer_free(
    RustBuffer buf,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rustbuffer_free(
      buf,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rustbuffer_free');
  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_free =
      _ffi_breez_sdk_liquid_bindings_rustbuffer_freePtr
          .asFunction<void Function(RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer ffi_breez_sdk_liquid_bindings_rustbuffer_reserve(
    RustBuffer buf,
    int additional,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rustbuffer_reserve(
      buf,
      additional,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_reservePtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(RustBuffer, ffi.Int32, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rustbuffer_reserve');
  late final _ffi_breez_sdk_liquid_bindings_rustbuffer_reserve =
      _ffi_breez_sdk_liquid_bindings_rustbuffer_reservePtr
          .asFunction<RustBuffer Function(RustBuffer, int, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_set(
    UniFfiRustFutureContinuation callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_set(
      callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_setPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(UniFfiRustFutureContinuation)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_set');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_set =
      _ffi_breez_sdk_liquid_bindings_rust_future_continuation_callback_setPtr
          .asFunction<void Function(UniFfiRustFutureContinuation)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_u8(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_u8(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_u8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_u8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_u8(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_u8(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_u8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_u8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_u8(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_u8(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u8Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_u8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_u8Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_i8(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_i8(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_i8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_i8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_i8(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_i8(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i8Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_i8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_i8Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_i8(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_i8(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i8Ptr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_i8');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i8 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_i8Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_u16(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_u16(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_u16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_u16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_u16(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_u16(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_u16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_u16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_u16(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_u16(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u16Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_u16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_u16Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();
